tests/errors/known_bugs/TOO_MANY_ARGS.py
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(b:'int'):
    print(b)

f(1, 2)
